ipc/ipdl/test/ipdl/ok/PmessageCompress.ipdl
intr protocol PmessageCompress {
child:
    async foo() compress;
};
