ipc/ipdl/test/ipdl/error/extra/PDouble.ipdl
// This is a valid file.

protocol PDouble {
child: async Msg();
};
